[package]
name = "spatialhash_perf_test_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
glam = "0.25.0"
rand = "0.8.5"

[profile.release]
debug = true
strip = "none"

[profile.dev]
opt-level = 3
[profile.dev.package."*"]
opt-level = 3
